--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -10,7 +10,7 @@ WORKDIR /home/server
 # if some files will be changed, but not package.json
 # hash for this step will be the same, so it's not needed
 # to download all dependencies again on each build
-COPY package.json package-lock.json ./
+COPY package.json .
 
 # produce any available command inside container
 RUN npm install
